--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "webpack-cli": "^4.7.2"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.0",
+        "react-bootstrap": "^2.0.0-beta.5",
+        "react-modal": "^3.14.3",
+        "styled-components": "^5.3.0",
+        "swiper": "^6.8.3"
     }
 }
